--- a/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteRetiro.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteRetiro.rdlc
@@ -56,7 +56,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox10</rd:DefaultName>
-        <Top>4.91037cm</Top>
+        <Top>5.68676cm</Top>
         <Left>0.63057cm</Left>
         <Height>0.6cm</Height>
         <Width>0.96542cm</Width>
@@ -91,7 +91,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox11</rd:DefaultName>
-        <Top>4.91037cm</Top>
+        <Top>5.68676cm</Top>
         <Left>1.66654cm</Left>
         <Height>0.6cm</Height>
         <Width>8.02569cm</Width>
@@ -690,7 +690,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DataSet1</DataSetName>
-        <Top>2.93398cm</Top>
+        <Top>3.71037cm</Top>
         <Left>0.66584cm</Left>
         <Height>1.8cm</Height>
         <Width>9.27271cm</Width>
@@ -783,6 +783,71 @@
           </Border>
         </Style>
       </Line>
+      <Textbox Name="Textbox19">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>Caja :</Value>
+                <Style>
+                  <FontFamily>Calibri</FontFamily>
+                  <FontWeight>Bold</FontWeight>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox14</rd:DefaultName>
+        <Top>2.82333cm</Top>
+        <Left>0.66587cm</Left>
+        <Height>0.6cm</Height>
+        <Width>1.54747cm</Width>
+        <ZIndex>15</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox27">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=First(Fields!CAJA.Value, "DataSet1")</Value>
+                <Style>
+                  <FontFamily>Calibri</FontFamily>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox14</rd:DefaultName>
+        <Top>2.8987cm</Top>
+        <Left>2.5246cm</Left>
+        <Height>0.6cm</Height>
+        <Width>7.16763cm</Width>
+        <ZIndex>16</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
     </ReportItems>
     <Height>3.4251in</Height>
     <Style />
