--- a/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteEstadoResultadoPorCaja.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteEstadoResultadoPorCaja.rdlc
@@ -890,7 +890,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>4703510 - 68580422</Value>
+                  <Value>4239112</Value>
                   <Style>
                     <FontSize>8pt</FontSize>
                   </Style>
@@ -920,7 +920,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>Av. Villazon km 10.5</Value>
+                  <Value>Calle :Austria s/n</Value>
                   <Style>
                     <FontSize>8pt</FontSize>
                   </Style>
