--- a/branches/Sindicato/Sindicato.WebSite/Content/Icons.css
+++ b/branches/Sindicato/Sindicato.WebSite/Content/Icons.css
@@ -1027,3 +1027,5 @@
 .car-icon { background-image: url(Iconos48/car-icon.png) !important;}
 .Cash-register-icon { background-image: url(Iconos48/Cash-register-icon.png) !important;}
 .Calendar-icon { background-image: url(Iconos48/Calendar-icon.png) !important;}
+.money2-icon { background-image: url(Iconos48/money2.png) !important;}
+.loan-icon { background-image: url(Iconos48/loan.png) !important;}
