--- a/branches/Sindicato/Sindicato.WebSite/Content/Icons.css
+++ b/branches/Sindicato/Sindicato.WebSite/Content/Icons.css
@@ -1029,3 +1029,7 @@
 .Calendar-icon { background-image: url(Iconos48/Calendar-icon.png) !important;}
 .money2-icon { background-image: url(Iconos48/money2.png) !important;}
 .loan-icon { background-image: url(Iconos48/loan.png) !important;}
+.list-icon { background-image: url(Iconos48/list-icon.png) !important;}
+.prestamo-icon { background-image: url(Iconos48/prestamo-icon.png) !important;}
+.money-transfer-icon { background-image: url(Iconos48/money-transfer.png) !important;}
+.kardex-icon { background-image: url(Iconos48/kardex-icon.png) !important;}
