--- a/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteDetalleHojaPorSocio.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteDetalleHojaPorSocio.rdlc
@@ -703,7 +703,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>SINDICATO SAN MIGUEL LINEA 132 - REPORTE VENTA DE HOJAS POR SOCIO</Value>
+                  <Value>SINDICATO VALLE HERMOSO LINEA 121 - REPORTE VENTA DE HOJAS POR SOCIO</Value>
                   <Style>
                     <FontFamily>Calibri</FontFamily>
                     <FontWeight>Heavy</FontWeight>
