--- a/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteIngreso.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteIngreso.rdlc
@@ -799,7 +799,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>SINDICATO SAN MIGUEL LINEA 132</Value>
+                  <Value>SINDICATO VALLE HERMOSO LINEA 121</Value>
                   <Style>
                     <FontFamily>Calibri</FontFamily>
                     <FontWeight>Heavy</FontWeight>
