--- a/branches/Sindicato/Sindicato.WebSite/Reportes/HojaDetalleUso.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/HojaDetalleUso.rdlc
@@ -23,7 +23,7 @@
         <Top>2.86677cm</Top>
         <Left>2.28937cm</Left>
         <Height>0.75875cm</Height>
-        <Width>8.98229cm</Width>
+        <Width>7.8975cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -43,7 +43,6 @@
               <TextRun>
                 <Value>=First(Fields!PLACA.Value, "DataSetHoja")</Value>
                 <Style>
-                  <FontSize>14pt</FontSize>
                   <FontWeight>ExtraBold</FontWeight>
                 </Style>
               </TextRun>
@@ -52,19 +51,15 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>4.11031cm</Top>
-        <Left>2.28937cm</Left>
-        <Height>0.75875cm</Height>
-        <Width>8.98229cm</Width>
+        <Top>3.90774cm</Top>
+        <Left>2.73916cm</Left>
+        <Height>0.45cm</Height>
+        <Width>7.44771cm</Width>
         <ZIndex>1</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
       <Textbox Name="Textbox3">
@@ -74,30 +69,29 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>="13  DE  NOVIEMBRE"</Value>
+                <Value>=First(Fields!FECHA_USO.Value, "DataSetHoja")</Value>
                 <Style>
-                  <FontSize>14pt</FontSize>
+                  <FontSize>12pt</FontSize>
                   <FontWeight>ExtraBold</FontWeight>
+                  <Format>dd'     'MMMM'     'yyyy</Format>
                 </Style>
               </TextRun>
             </TextRuns>
-            <Style />
+            <Style>
+              <TextAlign>Center</TextAlign>
+            </Style>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>4.93962cm</Top>
+        <Top>4.39302cm</Top>
         <Left>2.28937cm</Left>
-        <Height>0.75875cm</Height>
-        <Width>8.98229cm</Width>
+        <Height>0.46771cm</Height>
+        <Width>7.8975cm</Width>
         <ZIndex>2</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
       <Textbox Name="Textbox4">
@@ -118,8 +112,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>1.62323cm</Top>
-        <Left>9.00979cm</Left>
+        <Top>1.17344cm</Top>
+        <Left>7.55458cm</Left>
         <Height>0.75875cm</Height>
         <Width>2.26188cm</Width>
         <ZIndex>3</ZIndex>
@@ -134,19 +128,19 @@
         </Style>
       </Textbox>
     </ReportItems>
-    <Height>17cm</Height>
+    <Height>15cm</Height>
     <Style>
       <Border>
         <Style>None</Style>
       </Border>
     </Style>
   </Body>
-  <Width>12cm</Width>
+  <Width>11cm</Width>
   <Page>
-    <PageHeight>17cm</PageHeight>
-    <PageWidth>12cm</PageWidth>
-    <InteractiveHeight>17cm</InteractiveHeight>
-    <InteractiveWidth>12cm</InteractiveWidth>
+    <PageHeight>15cm</PageHeight>
+    <PageWidth>11cm</PageWidth>
+    <InteractiveHeight>15cm</InteractiveHeight>
+    <InteractiveWidth>11cm</InteractiveWidth>
     <LeftMargin>0cm</LeftMargin>
     <RightMargin>0cm</RightMargin>
     <TopMargin>0cm</TopMargin>
