--- a/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteIngreso.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteIngreso.rdlc
@@ -781,6 +781,72 @@
           </Border>
         </Style>
       </Line>
+      <Textbox Name="Textbox19">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>Concepto :</Value>
+                <Style>
+                  <FontFamily>Calibri</FontFamily>
+                  <FontWeight>Bold</FontWeight>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox14</rd:DefaultName>
+        <Top>3.28732cm</Top>
+        <Left>0.63055cm</Left>
+        <Height>0.6cm</Height>
+        <Width>1.7239cm</Width>
+        <ZIndex>15</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox27">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=First(Fields!CONCEPTO.Value, "DataSet1")</Value>
+                <Style>
+                  <FontFamily>Calibri</FontFamily>
+                  <FontSize>8pt</FontSize>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox14</rd:DefaultName>
+        <Top>3.28732cm</Top>
+        <Left>2.53084cm</Left>
+        <Height>0.6cm</Height>
+        <Width>7.99388cm</Width>
+        <ZIndex>16</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
     </ReportItems>
     <Height>3.70833in</Height>
     <Style />
@@ -799,7 +865,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>SINDICATO SAN MIGUEL LINEA 132</Value>
+                  <Value>SINDICATO SAN MIGUEL LINEA 131</Value>
                   <Style>
                     <FontFamily>Calibri</FontFamily>
                     <FontWeight>Heavy</FontWeight>
@@ -930,6 +996,14 @@
         </Field>
         <Field Name="TOTAL_LITERAL">
           <DataField>TOTAL_LITERAL</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="CONCEPTO">
+          <DataField>CONCEPTO</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="CAJA">
+          <DataField>CAJA</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
