--- a/branches/Sindicato/Sindicato.WebSite/Content/extjs42.css
+++ b/branches/Sindicato/Sindicato.WebSite/Content/extjs42.css
@@ -639,3 +639,18 @@
     color: #000000; /*font-weight: bold;*/
 }
 
+.Sgaf-sinerror .x-grid-cell
+{
+    background-color: #00A05D !important;
+    color: #000000; /*font-weight: bold;*/
+}
+.Sgaf-conerror .x-grid-cell
+{
+    background-color: #F74C3F !important;
+    color: #000000; /*font-weight: bold;*/
+}
+.Sgaf-conadvertencia .x-grid-cell
+{
+    background-color: #F8CA27 !important;
+    color: #000000; /*font-weight: bold;*/
+}
