--- a/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteTotal.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteTotal.rdlc
@@ -2168,7 +2168,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>Jhamila Martinez</Value>
+                <Value>Mariela Rodriguez</Value>
                 <Style>
                   <FontFamily>Calibri</FontFamily>
                   <FontSize>12pt</FontSize>
