--- a/branches/Sindicato/Sindicato.WebSite/Reportes/HojaDetalleUsoRefuerzo.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/HojaDetalleUsoRefuerzo.rdlc
@@ -73,7 +73,7 @@
                 <Style>
                   <FontSize>12pt</FontSize>
                   <FontWeight>ExtraBold</FontWeight>
-                  <Format>dd'       'MMMM'     'yyyy</Format>
+                  <Format>MMMM'     'yyyy</Format>
                 </Style>
               </TextRun>
             </TextRuns>
@@ -88,9 +88,6 @@
         <Height>0.46771cm</Height>
         <Width>7.8975cm</Width>
         <ZIndex>2</ZIndex>
-        <Visibility>
-          <Hidden>=iif(Sum(Fields!MOVIL.Value, "DataSetHoja") &lt; 1000, false, true)</Hidden>
-        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -104,7 +101,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=Sum(Fields!MOVIL.Value, "DataSetHoja")</Value>
+                <Value>=First(Fields!PRECIO.Value, "DataSetHoja")</Value>
                 <Style>
                   <FontSize>14pt</FontSize>
                   <FontWeight>ExtraBold</FontWeight>
@@ -128,71 +125,6 @@
           <PaddingRight>2pt</PaddingRight>
           <PaddingTop>2pt</PaddingTop>
           <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
-      <Textbox Name="Textbox5">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>="Nro : "&amp; First(Fields!ID_HOJA.Value, "DataSetHoja") &amp; " G-VII"</Value>
-                <Style>
-                  <FontWeight>ExtraBold</FontWeight>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style>
-              <TextAlign>Right</TextAlign>
-            </Style>
-          </Paragraph>
-        </Paragraphs>
-        <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>0.54705cm</Top>
-        <Left>2.36875cm</Left>
-        <Height>0.45cm</Height>
-        <Width>7.44771cm</Width>
-        <ZIndex>4</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
-        </Style>
-      </Textbox>
-      <Textbox Name="Textbox6">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>=First(Fields!FECHA_USO.Value, "DataSetHoja")</Value>
-                <Style>
-                  <FontSize>12pt</FontSize>
-                  <FontWeight>ExtraBold</FontWeight>
-                  <Format>'        'MMMM'     'yyyy</Format>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style>
-              <TextAlign>Center</TextAlign>
-            </Style>
-          </Paragraph>
-        </Paragraphs>
-        <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>4.39302cm</Top>
-        <Left>2.28937cm</Left>
-        <Height>0.46771cm</Height>
-        <Width>7.8975cm</Width>
-        <ZIndex>5</ZIndex>
-        <Visibility>
-          <Hidden>=iif(Sum(Fields!MOVIL.Value, "DataSetHoja") &gt;= 1000, false, true)</Hidden>
-        </Visibility>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
         </Style>
       </Textbox>
     </ReportItems>
